[tool.poetry]
name = "nonebot-plugin-muteme"
version = "0.0.5-b1"
description = "适用于nonebot2 v11的禁言自己插件 高仿 @能干辉 的muteme"
authors = ["【夜风】NightWind <2125714976@qq.com>"]
license = "GPL-3"
readme = "README.md"
packages = [{include = "nonebot_plugin_muteme"}]
homepage = "https://hub.xb6868.com/XTxiaoting14332/nonebot-plugin-muteme"
repository = "https://hub.xb6868.com/XTxiaoting14332/nonebot-plugin-muteme"
documentation = "https://hub.xb6868.com/XTxiaoting14332/nonebot-plugin-muteme#README.md"

[[tool.poetry.source]]
name = "tsinghua"
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple/"
default = true

[tool.poetry.dependencies]
python = ">=3.8"
nonebot2 = ">=2.0.0rc1"
nonebot-adapter-onebot = ">=2.0.0"
httpx = ">=0.22.0"
ujson = ">=5.0.0"
Pillow = ">=9.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
